Fix blockquote alignment

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -14,5 +14,8 @@ footer{
 #chapter-17 blockquote{
 	font-variant: small-caps;
 	text-align: center;
-	text-indent: 0 !important;
+}
+
+#chapter-17 blockquote p{
+	text-indent: 0;
 }
